--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -5,12 +5,23 @@ authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
 description = "DNS client in Rust"
 license-file = "../LICENSE"
-keywords = ["dns", "client", "async", "tokio", "async-std", "resolver"]
+keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
 categories = ["asynchronous", "network-programming", "parser-implementations"]
 homepage = "https://github.com/r-bk/rsdns"
 repository = "https://github.com/r-bk/rsdns"
+
+[features]
+default = ["net-std"]
+net-std = []
+net-tokio = ["tokio/rt", "tokio/net"]
+net-async-std = ["async-std"]
+net-smol = ["smol"]
 
 [dependencies]
 thiserror = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
+
+tokio = { version = "^1", optional = true }
+async-std  = { version = "^1", optional = true }
+smol = { version = "^1", optional = true }
