--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -25,3 +25,7 @@ strum_macros = "0.20"
 tokio = { version = "^1", optional = true }
 async-std  = { version = "^1", optional = true }
 smol = { version = "^1", optional = true }
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
