ci: fix failing clippy warning
The build fails with the nightly+beta toolchains because clippy has
added a check of upper-case acronyms.

Adding this exception in code is hard in stable, as they are
not aware of this new lint. So, for now, I am allowing it in the ci
workflow only.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,14 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         name: Lint
+        if: ${{ matrix.rust == 'stable' || matrix.rust == '1.45.0' }}
         with:
           command: clippy
           args: -- -D warnings
+
+      - uses: actions-rs/cargo@v1
+        name: Lint
+        if: ${{ matrix.rust != 'stable' && matrix.rust != '1.45.0' }}
+        with:
+          command: clippy
+          args: -- -D warnings -A clippy::upper_case_acronyms
