--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -21,6 +21,7 @@ net-smol = ["smol"]
 thiserror = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
+arrayvec = { version = "0.5", features = ["array-sizes-129-255"] }
 
 tokio = { version = "^1", optional = true }
 async-std  = { version = "^1", optional = true }
