cargo: add "tokio/time" dependency
Needed for std::tokio::timeout function, to implement query_lifetime.

--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/r-bk/rsdns"
 [features]
 default = ["net-std"]
 net-std = []
-net-tokio = ["tokio/rt", "tokio/net"]
+net-tokio = ["tokio/rt", "tokio/net", "tokio/time"]
 net-async-std = ["async-std"]
 net-smol = ["smol"]
 
