--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -3,7 +3,7 @@ name = "rsdns"
 version = "0.1.0"
 authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
-description = "DNS client in Rust"
+description = "DNS Stub Resolver"
 license-file = "../LICENSE"
 keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
 categories = ["asynchronous", "network-programming", "parser-implementations"]
