ci: bump MSRV to 1.46
async-std started failing to compile on 1.45 due to a new indirect
dependency 'socket2' which in version 0.4.0 fails with the following
error:

   Compiling socket2 v0.4.0
error[E0658]: `match` is not allowed in a `const fn`
   --> /home/runner/.cargo/registry/src/github.com-1ecc6299db9ec823/socket2-0.4.0/src/lib.rs:156:9
    |
156 | /         match address {
157 | |             SocketAddr::V4(_) => Domain::IPV4,
158 | |             SocketAddr::V6(_) => Domain::IPV6,
159 | |         }
    | |_________^
    |
    = note: see issue #49146 <https://github.com/rust-lang/rust/issues/49146> for more information

   Compiling signal-hook-registry v1.3.0
error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
error: could not compile `socket2`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           - stable
           - beta
           - nightly
-          - 1.45.0  # minimal supported version
+          - 1.46.0  # MSRV
         runs_on:
           - ubuntu-latest
           - windows-latest
@@ -52,14 +52,14 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         name: Lint
-        if: ${{ matrix.rust == 'stable' || matrix.rust == '1.45.0' }}
+        if: ${{ matrix.rust == 'stable' || matrix.rust == '1.46.0' }}
         with:
           command: clippy
           args: --all-features -- -D warnings
 
       - uses: actions-rs/cargo@v1
         name: Lint
-        if: ${{ matrix.rust != 'stable' && matrix.rust != '1.45.0' }}
+        if: ${{ matrix.rust != 'stable' && matrix.rust != '1.46.0' }}
         with:
           command: clippy
           args: --all-features -- -D warnings -A clippy::upper_case_acronyms
