cargo: add smol-timeout dependency
Needed as smol doesn't provide a similar functionality, contrary to
tokio and async-std.

--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -31,6 +31,10 @@ optional = true
 version = "^1"
 optional = true
 
+[dependencies.smol-timeout]
+version = "0.6"
+optional = true
+
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
