cargo: bump arrayvec dependency to 0.7
Now that MSRV is 1.51 I can upgrade the arrayvec to latest version,
which is also dependent on 1.51.

This version accepts arbitrary capacity, which wasn't available in the
0.5.x version. This is needed for allocating an on-stack buffer to
receive a DNS response.

--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/r-bk/rsdns"
 thiserror = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
-arrayvec = { version = "0.5", features = ["array-sizes-129-255"] }
+arrayvec = "0.7"
 rand = "0.8"
 
 [features]
