ci: install rustfmt in doc-ci
Needed, as build script is going to require it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
+          components: rustfmt
       - uses: actions-rs/cargo@v1
         name: Doc
         env:
