--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,12 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macos-latest
+        feature:
+          - net-std
+          - net-async-std
+          - net-tokio
+          - net-smol
+          - all
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -34,29 +40,47 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         name: Build
+        if: ${{ matrix.feature != 'all' }}
+        with:
+          command: build
+          args: --no-default-features --features ${{ matrix.feature }}
+
+      - uses: actions-rs/cargo@v1
+        name: Build All
+        if: ${{ matrix.feature == 'all' }}
         with:
           command: build
           args: --all-features
 
       - uses: actions-rs/cargo@v1
         name: Test
+        if: ${{ matrix.feature != 'all' }}
+        with:
+          command: test
+          args: --no-default-features --features ${{ matrix.feature }}
+
+      - uses: actions-rs/cargo@v1
+        name: Test All
+        if: ${{ matrix.feature == 'all' }}
         with:
           command: test
           args: --all-features
 
       - uses: actions-rs/cargo@v1
-        name: Format
+        name: Lint
+        if: ${{ matrix.feature != 'all' }}
         with:
-          command: fmt
-          args: --all -- --check
+          command: clippy
+          args: --no-default-features --features ${{ matrix.feature }} -- -D warnings
 
       - uses: actions-rs/cargo@v1
-        name: Lint
+        name: Lint All
+        if: ${{ matrix.feature == 'all' }}
         with:
           command: clippy
           args: --all-features -- -D warnings
 
-  doc-ci:
+  common-ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -66,6 +90,11 @@ jobs:
           toolchain: nightly
           override: true
           components: rustfmt
+      - uses: actions-rs/cargo@v1
+        name: Format
+        with:
+          command: fmt
+          args: --all -- --check
       - uses: actions-rs/cargo@v1
         name: Doc
         env:
