makefile: generate doc in rsdns crate only
ch4 will be a binary, so it won't have any public API.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -10,5 +10,5 @@ workspace = false
 env = { "RUSTDOCFLAGS" = "--cfg docsrs" }
 toolchain = "nightly"
 command = "cargo"
-args = ["doc", "--all-features", "--no-deps", "--open"]
+args = ["doc", "-p", "rsdns", "--all-features", "--no-deps", "--open"]
 workspace = false
