net: async resolvers' initial implementation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,19 @@ jobs:
           - net-tokio
           - net-smol
           - all
+        include:
+          - runs_on: ubuntu-latest
+            feature: net-tokio,socket2
+            rust: stable
+          - runs_on: ubuntu-latest
+            feature: net-tokio,socket2
+            rust: beta
+          - runs_on: ubuntu-latest
+            feature: net-tokio,socket2
+            rust: nightly
+          - runs_on: ubuntu-latest
+            feature: net-tokio,socket2
+            rust: 1.51.0  # MSRV
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
