--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -32,7 +32,13 @@ tokio = { version = "1", optional = true, features = ["rt", "macros"]}
 async-std = { version = "1", optional = true, features = ["attributes"] }
 smol = { version = "1", optional = true }
 
+[target.'cfg(windows)'.dependencies]
+windows = "0.9.1"
+
 [build-dependencies]
 built = { version = "0.4.4", features = ["git2", "chrono"] }
 vergen = { version = "5.1.1", default-features = false, features = ["rustc", "si"] }
 tera = { version = "1.7.0", default-features = false }
+
+[target.'cfg(windows)'.build-dependencies]
+windows = "0.9.1"
