ch4: coding: fix formatting errors

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -11,3 +11,7 @@ toolchain = "nightly"
 command = "cargo"
 args = ["doc", "-p", "rsdns", "--all-features", "--no-deps", "--open"]
 workspace = false
+
+[tasks.fmt]
+command = "cargo"
+args = ["fmt", "--all", "--", "--check"]
