ci: run ch4 with backtrace enabled
To possibly pinpoint an unwrap panic that happened on mac-os.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,8 @@ jobs:
       - uses: actions-rs/cargo@v1
         name: show ch4 info
         if: ${{ matrix.feature != 'all' }}
+        env:
+          RUST_BACKTRACE: "1"
         with:
           command: run
           args: -- --info
