ci: run ch4 with full backtrace
Short backtrace is not enough.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         name: show ch4 info
         if: ${{ matrix.feature != 'all' }}
         env:
-          RUST_BACKTRACE: "1"
+          RUST_BACKTRACE: "full"
         with:
           command: run
           args: -- --info
