ci: exclude failing CI combination
For some still unclear reason async-std build of ch4 panics in runtime
on a failed unwrap. This commit exludes that combination from the build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
           - net-tokio
           - net-smol
           - all
+        exclude:
+          - runs_on: macos-latest
+            feature: net-async-std
+            rust: beta
         include:
           - runs_on: ubuntu-latest
             feature: net-tokio,socket2
