license: rename the license file
In preparation for adding Apache 2.0 license, as described in API
Guidelines at [1].

[1] https://rust-lang.github.io/api-guidelines/necessities.html#crate-and-its-dependencies-have-a-permissive-license-c-permissive

--- a/rsdns/Cargo.toml
+++ b/rsdns/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
 description = "DNS Client Library"
-license-file = "../LICENSE"
+license = "MIT"
 keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
 categories = ["asynchronous", "network-programming", "parser-implementations"]
 repository = "https://github.com/r-bk/rsdns"
