cargo: update license clause
To conform to Rust API Guidelines, as described at [1].

[1] https://rust-lang.github.io/api-guidelines/necessities.html#crate-and-its-dependencies-have-a-permissive-license-c-permissive

--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
 description = "DNS Stub Resolver CLI"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
 categories = ["command-line-utilities", "network-programming"]
 repository = "https://github.com/r-bk/rsdns"
