--- a/ch4/Cargo.toml
+++ b/ch4/Cargo.toml
@@ -37,6 +37,7 @@ windows = "0.9.1"
 [build-dependencies]
 built = { version = "0.4.4", features = ["git2", "chrono"] }
 tera = { version = "1.7.0", default-features = false }
+sysinfo = { version = "0.19.0" }
 
 [target.'cfg(windows)'.build-dependencies]
 windows = "0.9.1"
