--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,51 @@
-[workspace]
+[package]
+name = "rsdns"
+version = "0.1.0"
+authors = ["Rafael Buchbinder <rafi@rbk.io>"]
+edition = "2018"
+description = "DNS Client Library"
+license = "MIT OR Apache-2.0"
+keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
+categories = ["asynchronous", "network-programming", "parser-implementations"]
+repository = "https://github.com/r-bk/rsdns"
 
-members = [
-    "rsdns",
-]
+[dependencies]
+thiserror = "1.0"
+arrayvec = "0.7"
+rand = "0.8"
+cfg-if = "1.0.0"
 
-resolver = "2"
+[target.'cfg(target_os = "linux")'.dependencies]
+socket2 = { version = "0.4", optional = true, features = ["all"] }
+
+[features]
+default = ["net-std"]
+net-std = []
+net-tokio = ["tokio"]
+net-async-std = ["async-std"]
+net-smol = ["smol", "smol-timeout"]
+
+[dependencies.tokio]
+version = "^1"
+optional = true
+default-features = false
+features = ["rt", "net", "time", "io-util"]
+
+[dependencies.async-std]
+version = "^1"
+optional = true
+
+[dependencies.smol]
+version = "^1"
+optional = true
+
+[dependencies.smol-timeout]
+version = "0.6"
+optional = true
+
+[build-dependencies]
+tera = { version = "1.7.0", default-features = false }
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
