--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,42 +54,42 @@ jobs:
         if: ${{ matrix.feature != 'all' }}
         with:
           command: build
-          args: -p rsdns --no-default-features --features ${{ matrix.feature }}
+          args: --no-default-features --features ${{ matrix.feature }}
 
       - uses: actions-rs/cargo@v1
         name: build all rsdns
         if: ${{ matrix.feature == 'all' }}
         with:
           command: build
-          args: -p rsdns --all-features
+          args: --all-features
 
       - uses: actions-rs/cargo@v1
         name: test rsdns
         if: ${{ matrix.feature != 'all' }}
         with:
           command: test
-          args: -p rsdns --no-default-features --features ${{ matrix.feature }}
+          args: --no-default-features --features ${{ matrix.feature }}
 
       - uses: actions-rs/cargo@v1
         name: test all rsdns
         if: ${{ matrix.feature == 'all' }}
         with:
           command: test
-          args: -p rsdns --all-features
+          args: --all-features
 
       - uses: actions-rs/cargo@v1
         name: lint rsdns
         if: ${{ matrix.feature != 'all' }}
         with:
           command: clippy
-          args: -p rsdns --no-default-features --features ${{ matrix.feature }} -- -D warnings
+          args: --no-default-features --features ${{ matrix.feature }} -- -D warnings
 
       - uses: actions-rs/cargo@v1
         name: lint all rsdns
         if: ${{ matrix.feature == 'all' }}
         with:
           command: clippy
-          args: -p rsdns --all-features -- -D warnings
+          args: --all-features -- -D warnings
 
   common-ci:
     runs-on: ubuntu-latest
@@ -105,11 +105,11 @@ jobs:
         name: format all
         with:
           command: fmt
-          args: --all -- --check
+          args: -- --check
       - uses: actions-rs/cargo@v1
         name: doc rsdns
         env:
           RUSTDOCFLAGS: "--cfg docsrs"
         with:
           command: doc
-          args: -p rsdns --all-features --no-deps
+          args: --all-features --no-deps
