--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ cfg-if = "1.0.0"
 socket2 = { version = "0.4", optional = true, features = ["all"] }
 
 [features]
-default = ["net-std"]
+default = []
 net-std = []
 net-tokio = ["tokio"]
 net-async-std = ["async-std"]
