makefile: add no-default-features tasks

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -5,6 +5,18 @@ CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true
 command = "cargo"
 args = ["clippy", "--all-features"]
 
+[tasks.clippy-no-default]
+command = "cargo"
+args = ["clippy", "--no-default-features"]
+
+[tasks.test-no-default]
+command = "cargo"
+args = ["test", "--no-default-features"]
+
+[tasks.build-no-default]
+command = "cargo"
+args = ["build", "--no-default-features"]
+
 [tasks.doc]
 env = { "RUSTDOCFLAGS" = "--cfg docsrs" }
 toolchain = "nightly"
