--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
 description = "DNS Client Library"
 license = "MIT OR Apache-2.0"
-keywords = ["dns", "client", "async", "resolver", "tokio", "async-std", "smol"]
+keywords = ["dns", "client", "async", "resolver"]
 categories = ["asynchronous", "network-programming", "parser-implementations"]
 repository = "https://github.com/r-bk/rsdns"
 resolver = "2"
