--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ repository = "https://github.com/r-bk/rsdns"
 resolver = "2"
 
 [dependencies]
-thiserror = "~1.0.26"
-arrayvec = "~0.7.1"
-rand = "~0.8.4"
-cfg-if = "~1.0.0"
+thiserror = "1.0.26"
+arrayvec = "0.7.1"
+rand = "0.8.4"
+cfg-if = "1.0.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-socket2 = { version = "~0.4.1", optional = true, features = ["all"] }
+socket2 = { version = "0.4.1", optional = true, features = ["all"] }
 
 [features]
 default = []
@@ -41,11 +41,11 @@ version = "^1"
 optional = true
 
 [dependencies.smol-timeout]
-version = "~0.6.0"
+version = "0.6.0"
 optional = true
 
 [build-dependencies]
-tera = { version = "~1.12.1", default-features = false }
+tera = { version = "1.12.1", default-features = false }
 
 [package.metadata.docs.rs]
 all-features = true
