--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ cfg-if = "1.0.0"
 [target.'cfg(target_os = "linux")'.dependencies]
 socket2 = { version = "0.4.1", optional = true, features = ["all"] }
 
+[target.'cfg(windows)'.dependencies]
+windows = "0.19.0"
+
 [features]
 default = []
 net-std = []
@@ -46,6 +49,9 @@ optional = true
 
 [build-dependencies]
 tera = { version = "1.12.1", default-features = false }
+
+[target.'cfg(windows)'.build-dependencies]
+windows = "0.19.0"
 
 [package.metadata.docs.rs]
 all-features = true
