cargo: replace the 'resolver' keyword with 'client'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rafael Buchbinder <rafi@rbk.io>"]
 edition = "2018"
 description = "DNS Client Library"
 license = "MIT OR Apache-2.0"
-keywords = ["dns", "async", "resolver", "dig"]
+keywords = ["dns", "dig", "async", "client"]
 categories = ["asynchronous", "network-programming", "parser-implementations"]
 repository = "https://github.com/r-bk/rsdns"
 resolver = "2"
