--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/r-bk/rsdns"
 resolver = "2"
 
 [dependencies]
+bitflags = "1.3.2"
 thiserror = "1.0.26"
 arrayvec = "0.7.1"
 rand = "0.8.4"
