--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ version = "0.6.0"
 optional = true
 
 [build-dependencies]
-tera = { version = "1.12.1", default-features = false }
+tera = { version = "~1.12.1", default-features = false }
 
 [package.metadata.docs.rs]
 all-features = true
