--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,12 @@ exclude = [".git*", "Makefile.toml"]
 
 [dependencies]
 thiserror = "1.0.26"
-arrayvec = "0.7.1"
 rand = "0.8.4"
 cfg-if = "1.0.0"
+
+[dependencies.cds]
+version = "0.4.0"
+features= ["std", "arraystring", "arrayvec"]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 socket2 = { version = "0.4.1", optional = true, features = ["all"] }
