--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ version = "0.6.0"
 optional = true
 
 [build-dependencies]
-tera = { version = "1.16.0", default-features = false }
+tera = "1.16.0"
 
 [dev-dependencies]
 async-std = { version = "^1", features = ["attributes"] }
