--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,7 +206,7 @@ jobs:
         run: |
           MIRI_NIGHTLY=nightly-$(curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/miri)
           echo "Found miri at: $MIRI_NIGHTLY"
-          echo "::set-output name=miri::$MIRI_NIGHTLY"
+          echo "miri=$MIRI_NIGHTLY" >> $GITHUB_OUTPUT
         shell: bash
 
       - uses: actions/checkout@v2
