bench: move benchmark code from `rsdns-benches` repository
In preparation for deleting the `rsdns-benches` repository. Based on
experience from `cds`, benches should be maintained in the same repo.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,6 @@ smol-potat = "1.1.2"
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+[workspace]
+members = [".", "bench"]
