github: set swap size on miri runner to 10GB
miri runs are failing lately. Checking if this is related to bigger RAM
consumption of miri in latest releases. See [1] for the proposed
solution.

---
[1] https://github.com/actions/runner/issues/2468#issuecomment-1651313943

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,6 +157,11 @@ jobs:
           - net-tokio,socket2
           - net-smol
     steps:
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
+
       - id: find_miri
         run: |
           MIRI_NIGHTLY=nightly-$(curl -s https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/miri)
