github: disable the `miri` job
This commit temporarily disables the `miri` job because it still fails.
Enlargement of the swap space to 10GB allows the job to run more, but
now it fails due to 360 minute Github limit on job duration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,6 +142,7 @@ jobs:
         run: cargo fuzz run rrset_from_msg -- -max_total_time=5 -verbosity=0
 
   miri:
+    if: false  # disabled until miri RAM consumption is fixed
     runs-on: ${{ matrix.runs_on }}
     strategy:
       matrix:
