--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: --deny warnings
   MIRIFLAGS: -Zmiri-disable-isolation
   RUST_BACKTRACE: full
 
@@ -44,6 +43,8 @@ jobs:
           - runs_on: ubuntu-latest
             feature: net-tokio,socket2
             rust: 1.65.0  # MSRV
+    env:
+      RUSTFLAGS: --deny warnings
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1
@@ -89,6 +90,8 @@ jobs:
 
   common-ci:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: --deny warnings
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1
